--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ plugins:
 
 ---
 title: tag
-redirect_from: "/ptg"
+redirect_from: "https://ryo350.github.io/gh-pages/ptg/"
 redirect_to: http://www.github.com
 ---
