--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ plugins:
 ---
 title: tag
 redirect_from: "https://ryo350.github.io/gh-pages/ptg/"
-redirect_to: http://www.github.com
+redirect_to: "http://www.github.com"
 ---
