--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 plugins:
   - jekyll-redirect-from
 
----
-title: tag
-redirect_from: "https://ryo350.github.io/gh-pages/ptg/"
-redirect_to: "http://www.github.com"
----
+whiltelist:
+  - jekyll-redirect-from
+
+redirect_to:
+  - https://twitter.com
