--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 plugins:
   - jekyll-redirect-from
+
+whiltelist:
+  - jekyll-redirect-from
+
+redirect_from:
+  - "https://ryo350.github.io/gh-pages/ptg/"
